--- a/services/laser-dentistry.html
+++ b/services/laser-dentistry.html
@@ -5,21 +5,27 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>V-Smilez Dental Clinic - Contact</title>
-    <!--favicon-->
-    <link rel="icon" type="image/x-icon" href="./assets/images/favicon-32x32.png" />
-    <!--favicon-->
+    <title>Elysian Dental Care - Services|Kondapur,Hyderabard</title>
     <!-- google font -->
     <link href="//fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
     <!-- Template CSS Style link -->
-    <link rel="stylesheet" href="assets/css/style-starter.css">
+    <link rel="stylesheet" href="../assets/css/style-starter.css">
+    <link rel="icon" href="../assets/images/favi.png" type="image/x-icon">
 </head>
 
 <body>
+    <!-- //home block 2 -->
+    <div class="whatsapp">
+        <a href="https://wa.me/+918297721721">
+            <i class="fab fa-whatsapp"></i>
+        </a>
+    </div>
+
+    <!-- header -->
     <!-- loader -->
     <div id="ftco-loader" class="show fullscreen">
-        <img src="./assets/images/logo_icon.png" alt="" style="width:150px;" />
+        <img src="../assets/images/logo_icon.png" alt="" style="width:150px;" />
         <div class="loader"></div>
     </div>
     <!--loader-->
@@ -28,7 +34,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <a class="navbar-brand" href="index.html">
-                    <img src="./assets/images/logo.png" style="width: 100px;" />
+                    <img src="../assets/images/logo.png" style="width: 100px;" />
                 </a>
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false"
@@ -39,25 +45,25 @@
                 <div class="collapse navbar-collapse" id="navbarScroll">
                     <ul class="navbar-nav ms-auto me-2 my-2 my-lg-0 navbar-nav-scroll">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                            <a class="nav-link" aria-current="page" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about.html">About</a>
+                            <a class="nav-link" href="../about.html">About</a>
                         </li>
                         <li class="nav-item  drop-down">
-                            <a class="nav-link " href="/services.html">Services</a>
+                            <a class="nav-link active" href="../services.html">Services</a>
                             <ul class="drop-items">
-                                <li><a href="./services/dentalconsultation.html">Denatl Consultation</a></li>
-                                <li><a href="./services/laser-dentistry.html">Laser Dentistry</a></li>
+                                <li><a href="./dentalconsultation.html">Denatl Consultation</a></li>
+                                <li><a href="./laser-dentistry.html">Laser Dentistry</a></li>
 
 
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="appointment.html">Book An Appointment</a>
+                            <a class="nav-link" href="../appointment.html">Book An Appointment</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="contact.html">Contact</a>
+                            <a class="nav-link" href="../contact.html">Contact</a>
                         </li>
                     </ul>
                     <form action="#error" method="GET" class="d-flex search-header">
@@ -87,87 +93,93 @@
     <!-- //header -->
 
     <!-- inner banner -->
-    <div class="whatsapp">
-        <a href="https://wa.me/+918297721721">
-            <i class="fab fa-whatsapp"></i>
-        </a>
-    </div>
     <section class="inner-banner py-5">
         <div class="w3l-breadcrumb py-lg-5">
             <div class="container pt-4 pb-sm-4">
-                <h4 class="inner-text-title font-weight-bold pt-sm-5 pt-4">Contact Us</h4>
+                <h4 class="inner-text-title font-weight-bold pt-sm-5 pt-4">Our Services</h4>
                 <ul class="breadcrumbs-custom-path">
-                    <li><a href="index.html">Home</a></li>
-                    <li class="active"><i class="fas fa-angle-right mx-2"></i>Contact</li>
+                    <li><a href="/">Home</a></li>
+                    <li class="active"><i class="fas fa-angle-right mx-2"></i>Services<i
+                            class="fas fa-angle-right mx-2"></i>Laser Dentistry</li>
                 </ul>
             </div>
         </div>
     </section>
     <!-- //inner banner -->
 
-    <!-- contact section -->
-    <section class="w3l-contact-11 py-5" id="contact">
+    <!-- serviceblock1 section -->
+
+    <!-- //serviceblock1 section -->
+
+    <!-- serviceblock2 section -->
+    <section class="w3l-homeblock1 py-5" id="about">
         <div class="container py-md-5 py-4">
-            <h3 class="title-style text-center mb-5"><span>Contact </span> Us</h3>
-            <div class="row text-center mb-5 pb-lg-5 pb-sm-4">
-                <div class="col-lg-3 col-sm-6 contact-info">
-                    <i class="fas fa-map-marked-alt"></i>
-                    <h4>Location</h4>
-                    <p>1st Floor, beside Beeramguda Main Road, Mallikarjuna Nagar, Beeramguda, Ramachandrapuram,
-                        Hyderabad, Telangana 502032</p>
-                </div>
-                <div class="col-lg-3 col-sm-6 contact-info mt-md-0 mt-4">
-                    <i class="fas fa-headset"></i>
-                    <h4>Phone</h4>
-                    <p><a href="tel:+91 8297721721">+91 8297721721</a></p>
-                </div>
-                <div class="col-lg-3 col-sm-6 contact-info mt-lg-0 mt-4">
-                    <i class="fas fa-envelope-open-text"></i>
-                    <h4>Email</h4>
-                    <p><a href="mailto:vsmilezdentalclinicZ@gmail.com" class="email">vsmilezdentalclinicZ@gmail.com</a>
+            <div class="row align-items-center">
+                <div class="col-lg-6 pe-xl-5">
+                    <h3 class="title-style mb-3">About <span>Laser Dentistry</span></h3>
+                    <p>
+
+                        Laser dentistry, a revolutionary advancement in dental care, has transformed the landscape of
+                        dental clinics. This innovative technology utilizes focused beams of light energy to perform
+                        various dental procedures with unparalleled precision and minimal discomfort. In a dental clinic
+                        equipped with laser technology, patients experience reduced pain, swelling, and healing time
+                        compared to traditional methods.</p>
+                    <p>
+                        Laser dentistry is widely employed for procedures such as gum reshaping, cavity treatment, and
+                        teeth whitening. Its pinpoint accuracy allows for conservative treatment options, preserving
+                        more natural tooth structure.
                     </p>
+
                 </div>
-                <div class="col-lg-3 col-sm-6 contact-info mt-lg-0 mt-4">
-                    <i class="fas fa-user-clock"></i>
-                    <h4>Working Hours</h4>
-                    <p>24 Hours</p>
+                <div class="col-lg-6 homeaboutblock mt-lg-0 mt-5">
+                    <img src="../assets/images/s5.jpg" class="img-fluid radius-image" alt="Elysian Dental Care">
                 </div>
             </div>
-            <div class="form-inner-cont mx-auto" style="max-width:800px">
-                <form action="https://sendmail.w3layouts.com/submitForm" method="post" class="signin-form">
-                    <div class="row align-form-map">
-                        <div class="col-sm-6 form-input">
-                            <input type="text" name="w3lName" id="w3lName" placeholder="Name" />
-                        </div>
-                        <div class="col-sm-6 form-input">
-                            <input type="email" name="w3lSender" id="w3lSender" placeholder="Email" required="" />
-                        </div>
-                        <div class="col-sm-6 form-input">
-                            <input type="text" name="w3lSubect" placeholder="Subject" class="contact-input">
-                        </div>
-                        <div class="col-sm-6 form-input">
-                            <input type="number" name="w3lPhone" placeholder="Phone Number" class="contact-input">
-                        </div>
-                    </div>
-                    <div class="form-input">
-                        <textarea placeholder="Message" name="w3lMessage" id="w3lMessage" required=""></textarea>
-                    </div>
-                    <div class="submit text-right">
-                        <button type="submit" class="btn btn-style">Submit
-                        </button>
-                    </div>
-                </form>
+            <p> Additionally, the minimally invasive nature of laser procedures often eliminates the need for
+                anesthesia. Dental clinics embracing laser technology offer patients a more efficient and comfortable
+                experience, marking a significant leap forward in oral healthcare. Patients benefit from shorter
+                recovery periods, increased safety, and the potential for enhanced long-term oral health outcomes,
+                making laser dentistry a beacon of progress in modern dental practice.</p>
+        </div>
+
+    </section>
+    <!-- //serviceblock2 section -->
+
+    <section>
+        <div class="container text-center">
+            <h3 class="title-style mb-3" style="text-decoration:1px underline #46b7de;">Related <span>Services</span>
+            </h3>
+            <ul class="py-2">
+
+                <li><a href="./dentalconsultation.html"><span style="margin-right: 3px;">&#8594;</span>Denatl
+                        Consultation</a></li>
+                <li><a href="#"><span style="margin-right: 3px;">&#8594;</span>Tooth-Colored-Fillings</a></li>
+                <li><a href="#"><span style="margin-right: 3px;">&#8594;</span>Advanced-Dentures</a></li>
+
+        </div>
+    </section>
+
+    <!-- call section -->
+    <section class="w3l-call-to-action-6">
+        <div class="container py-md-5 py-sm-4 py-5">
+            <div class="d-sm-flex align-items-center justify-content-between">
+                <div class="left-content-call">
+                    <h3 class="title-big">Visit Now!</h3>
+                    <p class="text-white mt-1">Begin the change today</p>
+                </div>
+                <div class="right-content-call mt-sm-0 mt-4">
+                    <ul class="buttons">
+                        <li class="phone-sec me-lg-4"><i class="fas fa-phone-volume"></i>
+                            <a class="call-style-w3" href="tel:+9182977 21721">+9182977 21721</a>
+                        </li>
+                        <li><a href="/appointment.html" class="btn btn-style btn-style-2 mt-lg-0 mt-3">Book Now</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </section>
-    <!-- map -->
-    <div class="map">
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3804.95956595504!2d78.29780777421243!3d17.509443499279293!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb92a9c2acbbed%3A0x23e408880a926286!2sV-Smilez%20Dental%20Clinic!5e0!3m2!1sen!2sin!4v1706361266497!5m2!1sen!2sin"
-            width="100%" height="400" frameborder="0" style="border: 0px;" allowfullscreen=""></iframe>
-
-    </div>
-    <!-- //contact section -->
+    <!-- //call section -->
 
     <!-- footer -->
     <footer class="w3l-footer-29-main">
@@ -229,41 +241,22 @@
         </div>
     </footer>
     <!-- //footer -->
-
-
     <!-- Js scripts -->
     <!-- move top -->
     <button onclick="topFunction()" id="movetop" title="Go to top">
         <span class="fas fa-level-up-alt" aria-hidden="true"></span>
     </button>
     <script>
-        // When the user scrolls down 20px from the top of the document, show the button
-        window.onscroll = function () {
-            scrollFunction()
-        };
 
-        function scrollFunction() {
-            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-                document.getElementById("movetop").style.display = "block";
-            } else {
-                document.getElementById("movetop").style.display = "none";
-            }
-        }
-
-        // When the user clicks on the button, scroll to the top of the document
-        function topFunction() {
-            document.body.scrollTop = 0;
-            document.documentElement.scrollTop = 0;
-        }
     </script>
     <!-- //move top -->
 
     <!-- common jquery plugin -->
-    <script src="assets/js/jquery-3.3.1.min.js"></script>
+    <script src="../assets/js/jquery-3.3.1.min.js"></script>
     <!-- //common jquery plugin -->
 
     <!-- theme switch js (light and dark)-->
-    <script src="assets/js/theme-change.js"></script>
+    <script src="../assets/js/theme-change.js"></script>
     <!-- //theme switch js (light and dark)-->
 
     <!-- MENU-JS -->
@@ -292,6 +285,22 @@
                 }
             });
         });
+        // loader
+        var loader = function () {
+            // Show loader
+            $("#ftco-loader").addClass("show");
+
+            // Hide loader after document is fully loaded
+            window.onload = function () {
+                setTimeout(function () {
+                    if ($("#ftco-loader").length > 0) {
+                        $("#ftco-loader").removeClass("show");
+                    }
+                }, 1000);
+            };
+        };
+
+        loader();
     </script>
     <!-- //MENU-JS -->
 
@@ -306,7 +315,7 @@
     <!-- //disable body scroll which navbar is in active -->
 
     <!-- bootstrap -->
-    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="../assets/js/bootstrap.min.js"></script>
     <!-- //bootstrap -->
     <!-- //Js scripts -->
 </body>
