--- a/about.html
+++ b/about.html
@@ -17,6 +17,12 @@
 </head>
 
 <body>
+    <!-- loader -->
+    <div id="ftco-loader" class="show fullscreen">
+        <img src="./assets/images/logo_icon.png" alt="" style="width:150px;" />
+        <div class="loader"></div>
+    </div>
+    <!--loader-->
     <!-- header -->
     <header id="site-header" class="fixed-top">
         <div class="container">
@@ -38,8 +44,14 @@
                         <li class="nav-item">
                             <a class="nav-link active" href="about.html">About</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="services.html">Services</a>
+                        <li class="nav-item  drop-down">
+                            <a class="nav-link " href="/services.html">Services</a>
+                            <ul class="drop-items">
+                                <li><a href="./services/dentalconsultation.html">Denatl Consultation</a></li>
+                                <li><a href="./services/laser-dentistry.html">Laser Dentistry</a></li>
+
+
+                            </ul>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="appointment.html">Book An Appointment</a>
@@ -483,7 +495,7 @@
                         <p class="mb-2 pe-xl-5">Address : 1st Floor, beside Beeramguda Main Road, Mallikarjuna Nagar,
                             Beeramguda, Ramachandrapuram, Hyderabad, Telangana 502032.
                         </p>
-                        <p class="mb-2">Phone Number : <a href="tel:+1(21) 234 4567">82977 21721</a></p>
+                        <p class="mb-2">Phone Number : <a href="tel:+9182977 21721">82977 21721</a></p>
                         <p class="mb-2">Email : <a href="mailto:info@example.com">vsmilezdentalclinic@gmail.com</a></p>
                     </div>
                     <div class="col-md-2 col-4 footer-list-29 mt-md-0 mt-4">
@@ -497,11 +509,19 @@
                     </div>
                     <div class="col-lg-3 col-md-3 col-4 ps-lg-5 ps-md-4 footer-list-29 mt-md-0 mt-4">
                         <ul>
-                            <h6 class="footer-title-29">Explore</h6>
-                            <li><a href="#blog">Blog Posts</a></li>
-                            <li><a href="#privacy">Privacy policy</a></li>
-                            <li><a href="contact.html">Contact Us</a></li>
-                            <li><a href="#license">License & uses</a></li>
+                            <h6 class="footer-title-29">Social Links</h6>
+                            <li><a href="#"><i class="fab fa-instagram" style="columns: white;margin-right: 5px;"></i>
+                                    Instagram</a>
+                            </li>
+                            <li><a href="#"><i class="fab fa-facebook"
+                                        style="columns: white;margin-right: 5px;"></i>Facebook</a>
+                            </li>
+                            <li><a href="#"><i class="fab fa-twitter"
+                                        style="columns: white;margin-right: 5px;"></i>Twitter</a>
+                            </li>
+                            <li><a href="#"><i class="fab fa-linkedin"
+                                        style="columns: white;margin-right: 5px;"></i>Linkedin</a>
+                            </li>
                         </ul>
                     </div>
                     <div class="col-lg-2 col-md-2 col-4 footer-list-29 mt-md-0 mt-4">
@@ -515,7 +535,7 @@
                     </div>
                 </div>
                 <!-- copyright -->
-                <p class="copy-footer-29 text-center pt-lg-2 mt-2 pb-2"> © 2024 V-Smilez Dental. All rights reserved.
+                <p class="copy-footer-29 text-center pt-lg-2 mt-1 pb-2">© 2024 V-Smilez Dental. All rights reserved.
                     Design by
                     <a href="https://www.thepatternscompany.com/" target="_blank">
                         The Patterns Company</a>
@@ -525,6 +545,7 @@
         </div>
     </footer>
     <!-- //footer -->
+
 
     <!-- Js scripts -->
     <!-- move top -->
