--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
 </head>
 
 <body>
+    <!-- loader -->
+    <div id="ftco-loader" class="show fullscreen">
+        <img src="./assets/images/logo_icon.png" alt="" style="width:150px;" />
+        <div class="loader"></div>
+    </div>
+    <!--loader-->
     <!-- header -->
     <header id="site-header" class="fixed-top">
         <div class="container">
@@ -40,8 +46,14 @@
                         <li class="nav-item">
                             <a class="nav-link" href="about.html">About</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="services.html">Services</a>
+                        <li class="nav-item  drop-down">
+                            <a class="nav-link " href="/services.html">Services</a>
+                            <ul class="drop-items">
+                                <li><a href="./services/dentalconsultation.html">Denatl Consultation</a></li>
+                                <li><a href="./services/laser-dentistry.html">Laser Dentistry</a></li>
+
+
+                            </ul>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="appointment.html">Book An Appointment</a>
@@ -75,7 +87,9 @@
         </div>
     </header>
     <!-- //header -->
+    <style>
 
+    </style>
     <!-- banner section -->
     <section class="w3l-main-slider" id="home">
         <div class="banner-content">
@@ -555,11 +569,19 @@
                     </div>
                     <div class="col-lg-3 col-md-3 col-4 ps-lg-5 ps-md-4 footer-list-29 mt-md-0 mt-4">
                         <ul>
-                            <h6 class="footer-title-29">Explore</h6>
-                            <li><a href="#blog">Blog Posts</a></li>
-                            <li><a href="#privacy">Privacy policy</a></li>
-                            <li><a href="contact.html">Contact Us</a></li>
-                            <li><a href="#license">License & uses</a></li>
+                            <h6 class="footer-title-29">Social Links</h6>
+                            <li><a href="#"><i class="fab fa-instagram" style="columns: white;margin-right: 5px;"></i>
+                                    Instagram</a>
+                            </li>
+                            <li><a href="#"><i class="fab fa-facebook"
+                                        style="columns: white;margin-right: 5px;"></i>Facebook</a>
+                            </li>
+                            <li><a href="#"><i class="fab fa-twitter"
+                                        style="columns: white;margin-right: 5px;"></i>Twitter</a>
+                            </li>
+                            <li><a href="#"><i class="fab fa-linkedin"
+                                        style="columns: white;margin-right: 5px;"></i>Linkedin</a>
+                            </li>
                         </ul>
                     </div>
                     <div class="col-lg-2 col-md-2 col-4 footer-list-29 mt-md-0 mt-4">
