--- a/about.html
+++ b/about.html
@@ -510,16 +510,15 @@
                     <div class="col-lg-3 col-md-3 col-4 ps-lg-5 ps-md-4 footer-list-29 mt-md-0 mt-4">
                         <ul>
                             <h6 class="footer-title-29">Social Links</h6>
-                            <li><a href="#"><i class="fab fa-instagram" style="columns: white;margin-right: 5px;"></i>
-                                    Instagram</a>
+                            <li><a href="https://www.instagram.com/v_smilez_dental_clinic/" target="_blank"><i class="fab fa-instagram" style="columns: white;margin-right: 5px;"></i>Instagram</a>
                             </li>
-                            <li><a href="#"><i class="fab fa-facebook"
-                                        style="columns: white;margin-right: 5px;"></i>Facebook</a>
-                            </li>
+                            <li><a href="https://www.facebook.com/profile.php?id=100083791375048" target="_blank"><i class="fab fa-facebook"
+                                style="columns: white;margin-right: 5px;"></i>Facebook</a>
+                    </li>
                             <li><a href="#"><i class="fab fa-twitter"
                                         style="columns: white;margin-right: 5px;"></i>Twitter</a>
                             </li>
-                            <li><a href="#"><i class="fab fa-linkedin"
+                            <li><a href="https://www.linkedin.com/in/anitha-vsmilezdental-2ab9162b3/" target="_blank"><i class="fab fa-linkedin"
                                         style="columns: white;margin-right: 5px;"></i>Linkedin</a>
                             </li>
                         </ul>
