--- a/index.html
+++ b/index.html
@@ -381,13 +381,13 @@
                     <div class="team-block-single">
                         <div class="team-grids">
                             <a href="#team-single">
-                                <img src="assets/images/doc-1 (8).jpeg" class="img-fluid" alt="">
+                                <img src="/assets/images/doc-1 (1).jpeg" class="img-fluid" alt="">
 
                             </a>
                         </div>
                         <div class="team-bottom-block">
-                            <h5 class="member mb-1"><a href="#team">Dr. MVS Sudhir</a></h5>
-                            <small>Oral & Maxillo Facial Surgeon</small>
+                            <h5 class="member mb-1"><a href="#team">Dr. B.Anitha</a></h5>
+                            <small>Cosmetic Dental Surgeon & Implantologist</small>
                         </div>
                     </div>
                 </div>
@@ -395,13 +395,13 @@
                     <div class="team-block-single">
                         <div class="team-grids">
                             <a href="#team-single">
-                                <img src="assets/images/doc-1 (3).jpeg" class="img-fluid" alt="">
+                                <img src="/assets/images/doc-1 (2).jpeg" class="img-fluid" alt="">
 
                             </a>
                         </div>
                         <div class="team-bottom-block">
-                            <h5 class="member mb-1 active"><a href="#team">Dr. Rajashekar Nutalapati</a></h5>
-                            <small>Periodontist</small>
+                            <h5 class="member mb-1 active"><a href="#team">Dr. Y.D.Vijaya Simha Raju</a></h5>
+                            <small>Prosthodontist & Implantologist</small>
                         </div>
                     </div>
                 </div>
@@ -535,7 +535,7 @@
                 <div class="right-content-call mt-sm-0 mt-4">
                     <ul class="buttons">
                         <li class="phone-sec me-lg-4"><i class="fas fa-phone-volume"></i>
-                            <a class="call-style-w3" href="tel:+9182977 21721">82977 21721</a>
+                            <a class="call-style-w3" href="tel:+918297721721">+918297721721</a>
                         </li>
                         <li><a href="appointment.html" class="btn btn-style btn-style-2 mt-lg-0 mt-3">Book Now</a> </li>
                     </ul>
@@ -555,7 +555,7 @@
                         <p class="mb-2 pe-xl-5">Address : 1st Floor, beside Beeramguda Main Road, Mallikarjuna Nagar,
                             Beeramguda, Ramachandrapuram, Hyderabad, Telangana 502032.
                         </p>
-                        <p class="mb-2">Phone Number : <a href="tel:+9182977 21721">82977 21721</a></p>
+                        <p class="mb-2">Phone Number : <a href="tel:+918297721721">+91 8297721721</a></p>
                         <p class="mb-2">Email : <a href="mailto:info@example.com">vsmilezdentalclinic@gmail.com</a></p>
                     </div>
                     <div class="col-md-2 col-4 footer-list-29 mt-md-0 mt-4">
@@ -570,16 +570,16 @@
                     <div class="col-lg-3 col-md-3 col-4 ps-lg-5 ps-md-4 footer-list-29 mt-md-0 mt-4">
                         <ul>
                             <h6 class="footer-title-29">Social Links</h6>
-                            <li><a href="#"><i class="fab fa-instagram" style="columns: white;margin-right: 5px;"></i>
+                            <li><a href="https://www.instagram.com/v_smilez_dental_clinic/" target="_blank"><i class="fab fa-instagram" style="columns: white;margin-right: 5px;"></i>
                                     Instagram</a>
                             </li>
-                            <li><a href="#"><i class="fab fa-facebook"
+                            <li><a href="https://www.facebook.com/profile.php?id=100083791375048" target="_blank"><i class="fab fa-facebook"
                                         style="columns: white;margin-right: 5px;"></i>Facebook</a>
                             </li>
-                            <li><a href="#"><i class="fab fa-twitter"
+                            <li><a href="#" target="_blank"><i class="fab fa-twitter"
                                         style="columns: white;margin-right: 5px;"></i>Twitter</a>
                             </li>
-                            <li><a href="#"><i class="fab fa-linkedin"
+                            <li><a href="https://www.linkedin.com/in/anitha-vsmilezdental-2ab9162b3/" target="_blank"><i class="fab fa-linkedin"
                                         style="columns: white;margin-right: 5px;"></i>Linkedin</a>
                             </li>
                         </ul>
