--- a/about.html
+++ b/about.html
@@ -266,13 +266,13 @@
                     <div class="team-block-single">
                         <div class="team-grids">
                             <a href="#team-single">
-                                <img src="assets/images/doc-1 (8).jpeg" class="img-fluid" alt="">
+                                <img src="/assets/images/doc-1 (1).jpeg" class="img-fluid" alt="">
 
                             </a>
                         </div>
                         <div class="team-bottom-block p-4">
-                            <h5 class="member mb-1"><a href="#team">Dr. MVS Sudhir</a></h5>
-                            <small>Oral & Maxilo Facial Surgeon</small>
+                            <h5 class="member mb-1"><a href="#team">Dr. B.Anitha</a></h5>
+                            <small>Cosmetic Dental Surgeon & Implantologist</small>
                         </div>
                     </div>
                 </div>
@@ -280,7 +280,7 @@
                     <div class="team-block-single">
                         <div class="team-grids">
                             <a href="#team-single">
-                                <img src="assets/images/doc-1 (3).jpeg" class="img-fluid" alt="">
+                                <img src="/assets/images/doc-1 (3).jpeg" class="img-fluid" alt="">
 
                             </a>
                         </div>
@@ -392,12 +392,12 @@
                     <div class="team-block-single">
                         <div class="team-grids">
                             <a href="#team-single">
-                                <img src="assets/images/doc-1 (1).jpeg" class="img-fluid" alt="">
+                                <img src="/assets/images/doc-1 (8).jpeg" class="img-fluid" alt="">
 
                             </a>
                         </div>
                         <div class="team-bottom-block p-4">
-                            <h5 class="member mb-1"><a href="#team">Dr. B.Anitha</a></h5>
+                            <h5 class="member mb-1"><a href="#team">Dr. MVS Sudhir</a></h5>
                             <small>Cosmetic Dental Surgeon & Implantologist</small>
                         </div>
                     </div>
