--- a/index.html
+++ b/index.html
@@ -536,6 +536,7 @@
                     <ul class="buttons">
                         <li class="phone-sec me-lg-4"><i class="fas fa-phone-volume"></i>
                             <a class="call-style-w3" href="tel:+918297721721">+918297721721</a>
+                            
                         </li>
                         <li><a href="appointment.html" class="btn btn-style btn-style-2 mt-lg-0 mt-3">Book Now</a> </li>
                     </ul>
@@ -576,7 +577,7 @@
                             <li><a href="https://www.facebook.com/profile.php?id=100083791375048" target="_blank"><i class="fab fa-facebook"
                                         style="columns: white;margin-right: 5px;"></i>Facebook</a>
                             </li>
-                            <li><a href="#" target="_blank"><i class="fab fa-twitter"
+                            <li><a href="#"><i class="fab fa-twitter"
                                         style="columns: white;margin-right: 5px;"></i>Twitter</a>
                             </li>
                             <li><a href="https://www.linkedin.com/in/anitha-vsmilezdental-2ab9162b3/" target="_blank"><i class="fab fa-linkedin"
