--- a/services.html
+++ b/services.html
@@ -289,7 +289,7 @@
                 <div class="right-content-call mt-sm-0 mt-4">
                     <ul class="buttons">
                         <li class="phone-sec me-lg-4"><i class="fas fa-phone-volume"></i>
-                            <a class="call-style-w3" href="tel:+918297721721">+91 8297721721</a>
+                            <a class="call-style-w3" href="tel:+918297721721">+918297721721</a>
                         </li>
                         <li><a href="appointment.html" class="btn btn-style btn-style-2 mt-lg-0 mt-3">Book Now</a> </li>
                     </ul>
