modified:   about.html

--- a/services.html
+++ b/services.html
@@ -67,7 +67,7 @@
                     </form>
                 </div>
                 <div class="whatsapp">
-                    <a href="https://wa.me/+918297721721">
+                    <a href="https://wa.me/+918187835489">
                         <i class="fab fa-whatsapp"></i>
                     </a>
                 </div>
@@ -289,7 +289,7 @@
                 <div class="right-content-call mt-sm-0 mt-4">
                     <ul class="buttons">
                         <li class="phone-sec me-lg-4"><i class="fas fa-phone-volume"></i>
-                            <a class="call-style-w3" href="tel:+918297721721">+918297721721</a>
+                            <a class="call-style-w3" href="tel:+918187835489">+918187835489</a>
                         </li>
                         <li><a href="appointment.html" class="btn btn-style btn-style-2 mt-lg-0 mt-3">Book Now</a> </li>
                     </ul>
@@ -324,16 +324,19 @@
                     <div class="col-lg-3 col-md-3 col-4 ps-lg-5 ps-md-4 footer-list-29 mt-md-0 mt-4">
                         <ul>
                             <h6 class="footer-title-29">Social Links</h6>
-                            <li><a href="https://www.instagram.com/v_smilez_dental_clinic/" target="_blank"><i class="fab fa-instagram" style="columns: white;margin-right: 5px;"></i>
+                            <li><a href="https://www.instagram.com/v_smilez_dental_clinic/" target="_blank"><i
+                                        class="fab fa-instagram" style="columns: white;margin-right: 5px;"></i>
                                     Instagram</a>
                             </li>
-                            <li><a href="https://www.facebook.com/profile.php?id=100083791375048" target="_blank"><i class="fab fa-facebook"
+                            <li><a href="https://www.facebook.com/profile.php?id=100083791375048" target="_blank"><i
+                                        class="fab fa-facebook"
                                         style="columns: white;margin-right: 5px;"></i>Facebook</a>
                             </li>
                             <li><a href="#"><i class="fab fa-twitter"
                                         style="columns: white;margin-right: 5px;"></i>Twitter</a>
                             </li>
-                            <li><a href="https://www.linkedin.com/in/anitha-vsmilezdental-2ab9162b3/" target="_blank"><i class="fab fa-linkedin"
+                            <li><a href="https://www.linkedin.com/in/anitha-vsmilezdental-2ab9162b3/" target="_blank"><i
+                                        class="fab fa-linkedin"
                                         style="columns: white;margin-right: 5px;"></i>Linkedin</a>
                             </li>
                         </ul>
