--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <div class="imginfo__box">
                         <h6 class="imginfo__title">Get a Appointment Today!</h6>
                         <p>Smile bright, schedule an appointment<br>let's keep those pearly whites shining</p>
-                        <a href="tel:http:// +91 8297721721"><i class="fas fa-phone-alt"></i> +91 8297721721 </a>
+                        <a href="tel:http://+918187835489"><i class="fas fa-phone-alt"></i>+918187835489 </a>
                     </div>
                 </div>
                 <div class="col-xl-5 col-lg-6 offset-xl-1 mt-lg-0 mt-5 pt-lg-0 pt-5">
@@ -229,7 +229,7 @@
     </section>
     <!-- //home block 2 -->
     <div class="whatsapp">
-        <a href="https://wa.me/+918297721721">
+        <a href="https://wa.me/+918187835489">
             <i class="fab fa-whatsapp"></i>
         </a>
     </div>
@@ -535,8 +535,8 @@
                 <div class="right-content-call mt-sm-0 mt-4">
                     <ul class="buttons">
                         <li class="phone-sec me-lg-4"><i class="fas fa-phone-volume"></i>
-                            <a class="call-style-w3" href="tel:+918297721721">+918297721721</a>
-                            
+                            <a class="call-style-w3" href="tel:+918187835489">+918187835489</a>
+
                         </li>
                         <li><a href="appointment.html" class="btn btn-style btn-style-2 mt-lg-0 mt-3">Book Now</a> </li>
                     </ul>
@@ -556,7 +556,7 @@
                         <p class="mb-2 pe-xl-5">Address : 1st Floor, beside Beeramguda Main Road, Mallikarjuna Nagar,
                             Beeramguda, Ramachandrapuram, Hyderabad, Telangana 502032.
                         </p>
-                        <p class="mb-2">Phone Number : <a href="tel:+918297721721">+91 8297721721</a></p>
+                        <p class="mb-2">Phone Number : <a href="tel:+918187835489">+91 8187835489</a></p>
                         <p class="mb-2">Email : <a href="mailto:info@example.com">vsmilezdentalclinic@gmail.com</a></p>
                     </div>
                     <div class="col-md-2 col-4 footer-list-29 mt-md-0 mt-4">
@@ -571,16 +571,19 @@
                     <div class="col-lg-3 col-md-3 col-4 ps-lg-5 ps-md-4 footer-list-29 mt-md-0 mt-4">
                         <ul>
                             <h6 class="footer-title-29">Social Links</h6>
-                            <li><a href="https://www.instagram.com/v_smilez_dental_clinic/" target="_blank"><i class="fab fa-instagram" style="columns: white;margin-right: 5px;"></i>
+                            <li><a href="https://www.instagram.com/v_smilez_dental_clinic/" target="_blank"><i
+                                        class="fab fa-instagram" style="columns: white;margin-right: 5px;"></i>
                                     Instagram</a>
                             </li>
-                            <li><a href="https://www.facebook.com/profile.php?id=100083791375048" target="_blank"><i class="fab fa-facebook"
+                            <li><a href="https://www.facebook.com/profile.php?id=100083791375048" target="_blank"><i
+                                        class="fab fa-facebook"
                                         style="columns: white;margin-right: 5px;"></i>Facebook</a>
                             </li>
                             <li><a href="#"><i class="fab fa-twitter"
                                         style="columns: white;margin-right: 5px;"></i>Twitter</a>
                             </li>
-                            <li><a href="https://www.linkedin.com/in/anitha-vsmilezdental-2ab9162b3/" target="_blank"><i class="fab fa-linkedin"
+                            <li><a href="https://www.linkedin.com/in/anitha-vsmilezdental-2ab9162b3/" target="_blank"><i
+                                        class="fab fa-linkedin"
                                         style="columns: white;margin-right: 5px;"></i>Linkedin</a>
                             </li>
                         </ul>
